--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-name: AmI-2014
+name: Ambient Intelligence - Technologies and Design (2015)
 markdown: redcarpet
 redcarpet:
   extensions: ["hard_wrap", "no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data", "strikethrough", "superscript"]
-pygments: true
+highlighter: true
 url: http://ami-2014.github.io
 permalink: /:categories/:year/:title.html
